--- a/package.json
+++ b/package.json
@@ -9,21 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@react-email/components": "0.0.16",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.364.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "^2.1.1",
+    "react-hook-form": "^7.51.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-indiana-drag-scroll": "^2.2.0",
     "react-intersection-observer": "^9.8.1",
     "react-use-draggable-scroll": "^0.4.7",
+    "resend": "^3.2.0",
     "tailwind-merge": "^2.2.2",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
